[metadata]
name = flake8_vedro
version = 0.0.2

[options.entry_points]
flake8.extension =
    VDR=flake8_vedro.plugins:VedroScenarioStylePlugin

[flake8]
max_line_length = 119
exclude = .git, .venv, venv, _files
per_file_ignores =
    _files/scenarios/wrong_scenario.py:F821
    __init__.py:F401
ignore = W503

# flake8-vedro params
scenario_params_max_count = 8
skip_tests_init_annotation = true

[mypy]
exclude = venv, .gitignore, _files
ignore_missing_imports = true
